# platform.upstream.epson-inkjet-printer-escpr

./: Makefile.am  Makefile.in  NEWS  README  README.ja  bootstrap  configure  configure.ac  epson-inkjet-printer-escpr.manifest  epson-inkjet-printer-escpr.spec  epson-inkjet-printer-escpr.spec.in  project.config
debian/: changelog  control  control.in  epson-inkjet-printer-escpr.install  postinst  postrm  rules  rules.in
layout_script/: Makefile.am  Makefile.in  paper_list.csv
lib/: Makefile.am  Makefile.in  epson-escpage-color.c  epson-escpage-comp.c  epson-escpage-mono.c  epson-escpage.c  epson-escpage.h  epson-escpr-api.c  epson-escpr-def.h  epson-escpr-media.h  epson-layout.c  escpr_def.h  escpr_osdep.h
lsb/: lsb-rpm.spec  lsb-rpm.spec.in
packaging/: epson-inkjet-printer-escpr.changes  epson-inkjet-printer-escpr.spec  epson-inkjet-printer-escpr.spec.in  tizen_add_job_media_progress.patch  tizen_bugfix.patch  tizen_report_page_info.patch
ppd/: Epson-Artisan_1430-epson-escpr-en.ppd  Epson-Artisan_630-epson-escpr-en.ppd  Epson-Artisan_700-epson-escpr-en.ppd  Epson-Artisan_710-epson-escpr-en.ppd  Epson-Artisan_720-epson-escpr-en.ppd  Epson-Artisan_730-epson-escpr-en.ppd  Epson-Artisan_800-epson-escpr-en.ppd  Epson-Artisan_810-epson-escpr-en.ppd  Epson-Artisan_830-epson-escpr-en.ppd  Epson-Artisan_837-epson-escpr-en.ppd  Epson-E-150-epson-escpr-en.ppd  Epson-E-200-epson-escpr-en.ppd  Epson-E-300-epson-escpr-en.ppd  Epson-E-330-epson-escpr-en.ppd  Epson-E-330S-epson-escpr-en.ppd  Epson-E-340-epson-escpr-en.ppd  Epson-E-350-epson-escpr-en.ppd  Epson-E-360_Series-epson-escpr-en.ppd  Epson-E-500-epson-escpr-en.ppd  Epson-E-520-epson-escpr-en.ppd  Epson-E-530-epson-escpr-en.ppd  Epson-E-600-epson-escpr-en.ppd  Epson-E-700-epson-escpr-en.ppd  Epson-E-720-epson-escpr-en.ppd  Epson-E-800-epson-escpr-en.ppd  Epson-E-810-epson-escpr-en.ppd  Epson-E-820-epson-escpr-en.ppd  Epson-E-830_Series-epson-escpr-en.ppd  Epson-EP-4004-epson-escpr-en.ppd  Epson-EP-702A-epson-escpr-en.ppd  Epson-EP-703A-epson-escpr-en.ppd  Epson-EP-704A-epson-escpr-en.ppd  Epson-EP-705A_Series-epson-escpr-en.ppd  Epson-EP-774A-epson-escpr-en.ppd  Epson-EP-775A_Series-epson-escpr-en.ppd  Epson-EP-801A-epson-escpr-en.ppd  Epson-EP-802A-epson-escpr-en.ppd  (+302 more)
src/: Makefile.am  Makefile.in  csv.c  csv.h  debug.c  debug.h  def.h  err.c  err.h  filter.c  libprtX.h  mem.c  mem.h  optBase.h  pips.h  pipsDef.h  str.c  str.h  wrapper.c
